--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "angular2-quickstart",
-  "devDependencies": {
-    "live-server": "^0.8.2",
-    "typescript": "^1.6.2"
-  },
   "scripts": {
-    "start": "live-server --open=src",
-    "tsc": "tsc -p . -w"
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "lite": "lite-server",
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
   "private": true,
   "dependencies": {
@@ -17,5 +15,10 @@
     "rxjs": "^5.0.0-beta.0",
     "systemjs": "^0.19.6",
     "zone.js": "^0.5.10"
+  },
+  "devDependencies": {
+    "concurrently": "^1.0.0",
+    "lite-server": "^1.3.1",
+    "typescript": "^1.7.3"
   }
 }
